Fix gap skills

--- a/style.css
+++ b/style.css
@@ -188,9 +188,8 @@ h4 {
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  gap: 20px;
+  gap: 50px;
   justify-content: center;
-  border-radius: 10px;
 }
 
 .img-skill:hover {
